# cuponera

./: docker-compose.yml
backend/: Dockerfile  app.py  pyproject.toml
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
nginx/: nginx.conf
